Added version, timeCreated, and timeUpdated everywhere.
