# api.yml
@@ -537,11 +537,22 @@ paths:
           $ref: '#/components/responses/500'
 components:
   schemas:
+    # TODO: Add a description for every field.
+    # TODO: Factor out common Resource fields.
     EntitlementSystemDefined:
       properties:
         id:
           type: integer
           format: int64
+        timeCreated:
+          type: string
+          description: Time that the resource was created.
+        timeUpdated:
+          type: string
+          description: Time that the resource was last updated.
+        version:
+          type: string
+          description: The number of times the resource has been written.
     EntitlementMutable:
       properties:
         name:
@@ -586,6 +597,15 @@ components:
         id:
           type: integer
           format: int64
+        timeCreated:
+          type: string
+          description: Time that the resource was created.
+        timeUpdated:
+          type: string
+          description: Time that the resource was last updated.
+        version:
+          type: string
+          description: The number of times the resource has been written.
     Permissions:
       type: array
       items:
@@ -600,6 +620,15 @@ components:
         id:
           type: integer
           format: int64
+        timeCreated:
+          type: string
+          description: Time that the resource was created.
+        timeUpdated:
+          type: string
+          description: Time that the resource was last updated.
+        version:
+          type: string
+          description: The number of times the resource has been written.
     RoleMutable:
       properties:
         name:
@@ -633,6 +662,15 @@ components:
         id:
           type: integer
           format: int64
+        timeCreated:
+          type: string
+          description: Time that the resource was created.
+        timeUpdated:
+          type: string
+          description: Time that the resource was last updated.
+        version:
+          type: string
+          description: The number of times the resource has been written.
     TenantMutable:
       properties:
         name:
@@ -668,6 +706,15 @@ components:
         id:
           type: integer
           format: int64
+        timeCreated:
+          type: string
+          description: Time that the resource was created.
+        timeUpdated:
+          type: string
+          description: Time that the resource was last updated.
+        version:
+          type: string
+          description: The number of times the resource has been written.
     UserMutable:
       properties:
         name:
@@ -701,6 +748,15 @@ components:
         id:
           type: integer
           format: int64
+        timeCreated:
+          type: string
+          description: Time that the resource was created.
+        timeUpdated:
+          type: string
+          description: Time that the resource was last updated.
+        version:
+          type: string
+          description: The number of times the resource has been written.
     UserGroupMutable:
       properties:
         name:
