# src/main/java/bakingbitsstudios/domain/Entitlement.java
@@ -3,13 +3,13 @@ package bakingbitsstudios.domain;
 import lombok.Builder;
 import lombok.Data;
 
-// TODO: timeCreated & timeUpdated here and spec. all other classes too.
 @Data
 public class Entitlement extends Resource {
 
     // IDE support for @SuperBuilder is lacking so we'll do the more verbose solution.
     @Builder
-    public Entitlement(final String id, final String name, final String self) {
-        super(id, name, self);
+    public Entitlement(final String id, final String name, final String version, final Long timeCreated,
+                       final Long timeUpdated, final String self) {
+        super(id, name, version, timeCreated, timeUpdated, self);
     }
 }
